--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Chris Lee</title>
-  <link rel="stylesheet" href="https://unpkg.com/tachyons@4.5.3/css/tachyons.min.css"/>
+  <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
   <link rel="stylesheet" href="style.css">
   <script type="text/javascript">
     var _gaq = _gaq || [];
@@ -22,7 +22,7 @@
   <nav class="gill-sans f6 ttu absolute w-100 bg-cl-dark-blue white bb b--white-10 z-1">
     <ul class="list ph4 ph5-ns">
       <li class="dib bb bw1 mr4 white pv3" style="margin-bottom: -1px"><span class="tracked-mega">Abou</span>t</li>
-      <li class="dib"><a href="/work.html" class="link white-70 hover-white pv3"><span class="tracked-mega">Wor</span>k</a></li>
+      <li class="dib"><a href="/work" class="link white-70 hover-white pv3"><span class="tracked-mega">Wor</span>k</a></li>
     </ul>
   </nav>
   <main class="charter lh-copy">
@@ -30,10 +30,9 @@
       <div class="dtc v-mid">
         <h1 class="self-name f3 cl-cyan ttu tracked-mega mb1">Chris Lee</h1>
         <p class="self-description mb5">Designer, Google Chrome</p>
-        <ul class="gill-sans f6 ttu list pl0">
-          <li class="mv2"><a href="mailto:chris@chrsl.net" class="link white-70 underline-hover"><span class="tracked-mega">Emai</span>l</a></li>
-          <li class="mv2"><a href="https://twitter.com/cleerview" class="link white-70 underline-hover"><span class="tracked-mega">Twitte</span>r</a></li>
-          <li class="mv2"><a href="http://dribbble.com/Cleer" class="link white-70 underline-hover"><span class="tracked-mega">Dribbbl</span>e</a></li>
+        <ul class="list pl0">
+          <li class="mv2"><a href="mailto:chris@chrsl.net" class="link white-70 underline-hover">chris@chrsl.net<a/></li>
+          <li class="mv2"><a href="https://twitter.com/cleerview" class="link white-70 underline-hover">Twitter<a/></li>
         </ul>
       </div>
     </section>
