--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Chris Lee</title>
-  <link rel="stylesheet" href="https://unpkg.com/tachyons@4.5.3/css/tachyons.min.css"/>
+  <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
   <link rel="stylesheet" href="style.css">
   <script type="text/javascript">
     var _gaq = _gaq || [];
@@ -19,111 +19,142 @@
   </script>
 </head>
 <body class="bg-cl-light-gray dark-gray">
-  <nav class="gill-sans f6 ttu w-100 bb b--black-10">
+  <nav class="gill-sans f6 ttu w-100 bb b--black-10 ">
     <ul class="list ph4 ph5-ns">
       <li class="dib mr4"><a href="/" class="link mid-gray hover-orange pv3"><span class="tracked-mega">Abou</span>t</a></li>
       <li class="dib bb bw1 dark-gray pv3" style="margin-bottom: -1px"><span class="tracked-mega">Wor</span>k</li>
     </ul>
   </nav>
-  <main class="charter lh-copy mw7 pa4 pt4 pa5-ns">
+  <main class="charter f5 lh-copy mw8 center pa4 pt4 pa5-ns">
     <section class="mb5 pb5 bb b--black-10">
-      <p class="gill-sans f6 ttu tracked lh-title">The work of</p>
-      <h1 class="f3 ttu orange tracked-mega">Chris Lee</h1>
+      <h1 class="f3 ttu orange tracked-mega mb3">Chris Lee</h1>
+      <p class="f3 lh-large mb4">Real decisions aren't simple. I solve complex problems through a combination of curiosity, creativity, and analytical decision-making.</p>
+      <div class="cf flex">
+        <div class="w-100">
+          <ul class="list">
+            <li>Product strategy</li>
+            <li>Interaction design</li>
+            <li>Motion design</li>
+            <li>Prototyping</li>
+          </ul>
+        </div>
+        <div class="w-100">
+          <ul class="list">
+            <li><a href="mailto:chris@chrsl.net" class="dark-gray hover-orange">chris@chrsl.net</a></li>
+            <li><a href="https://twitter.com/cleerview" class="dark-gray hover-orange">Twitter</a></li>
+            <li><a href="https://www.linkedin.com/in/cleer/" class="dark-gray hover-orange">LinkedIn</a></li>
+          </ul>
+        </div>
+      </div>
+      <!-- <h2 class="gill-sans f6 ttu tracked-mega mb2">Skills</h2>
+      <div class="cf mnh1">
+        <div class="fl w-50 w-third-l pa1">
+          <div class="f6 b bg-white br-pill pv2 ph3 ba b--black-20">Product strategy</div>
+        </div>
+        <div class="fl w-50 w-third-l pa1">
+          <div class="f6 b bg-white br-pill pv2 ph3 ba b--black-20">Interaction design</div>
+        </div>
+        <div class="fl w-50 w-third-l pa1">
+          <div class="f6 b bg-white br-pill pv2 ph3 ba b--black-20">Visual design</div>
+        </div>
+        <div class="fl w-50 w-third-l pa1">
+          <div class="f6 b bg-white br-pill pv2 ph3 ba b--black-20">Motion design</div>
+        </div>
+        <div class="fl w-50 w-third-l pa1">
+          <div class="f6 b bg-white br-pill pv2 ph3 ba b--black-20">Prototyping</div>
+        </div>
+        <div class="fl w-50 w-third-l pa1">
+          <div class="f6 b bg-white br-pill pv2 ph3 ba b--black-20">Web development</div>
+        </div>
+      </div> -->
+    </section>
+    <section class="mb5">
+      <div class="cf mb3 tl-ns">
+        <img src="images/chrome-icon.png" class="w-icon fl mr3 br-icon shadow-icon">
+        <p><h2 class="b di">Google Chrome</h2>, Staff Designer</p>
+        <p>2013 to present.</p>
+      </div>
+      <p class="lh-large mb3">Dozens of designers now work on Chrome, but when I started, there were about five of us. I was just a new college grad working on one of the world's most popular software products–but that didn't stop me from proposing bold new projects. This ability to creatively question the status quo was recognized with two promotions in my first couple years on the job.
+      <p class="lh-large mb3">It took some hard lessons to realize that execution is just as important as the idea. Over time, I refined the ability to carry some of the team's most ambitious projects all the way to success. Currently, I lead the design team for Chrome for Android, our largest platform, and help define our overall product strategy.</p>
+      <blockquote class="mv3 bl bw1 b--black-10 pl3">
+        <p class="lh-large mb3 i">It's shameful that something so important is so intangible to describe, but Chris builds products. He *gets* what's important to systems and platforms, and then executes on them, and keeps executing on them until something takes hold in the org. He understands the value of planting seeds and seeing them come to fruition later.</p>
+        <footer>– Glen Murphy, UX Director, Chrome & Android</footer>
+      </blockquote>
       <div class="mt4">
-        <p class="f3 mb4">I design software systems—at scales I can hardly fathom—with conviction that each individual user matters.</p>
-        <h2 class="gill-sans f6 ttu tracked-mega mb2">Skills</h2>
-        <div class="cf mnh1">
-          <div class="fl w-50 w-third-l pa1">
-            <div class="f6 b bg-white br-pill pv2 ph3 ba b--black-20">Product strategy</div>
+        <div class="mv4 sw-100 bg-black-05 br3 pa3">
+          <div class="pa3">
+            <h3 class="b">Tabs & tab groups</h3>
+            <p class="lh-large">Even as computing has gone mobile, we often fall back to our desktop computers for complex tasks like buying a new pair of shoes or planning a trip. I led a redesign of Chrome's tabs experience to help you get these things done on the go. Featured on the <a href="https://blog.google/products/chrome/get-more-done-with-google-chrome/" class="dark-gray hover-orange">Google blog.</a></a></p>
           </div>
-          <div class="fl w-50 w-third-l pa1">
-            <div class="f6 b bg-white br-pill pv2 ph3 ba b--black-20">Interaction design</div>
+          <div class="flex-l">
+            <div class="w-100 pa3">
+              <img src="images/chrome-tg-1.gif">
+              <p class="lh-large mt2">Tab groups help you organize longer running, multiple page tasks</p>
+            </div>
+            <div class="w-100 pa3">
+              <img src="images/chrome-tg-2.gif">
+              <p class="lh-large mt2">Once you group tabs, you can compare them in just a tap</p>
+            </div>
           </div>
-          <div class="fl w-50 w-third-l pa1">
-            <div class="f6 b bg-white br-pill pv2 ph3 ba b--black-20">Visual design</div>
+        </div>
+      </div>
+      <div class="mt4">
+
+        <div class="mv4 sw-100 bg-black-05 br3 pa3">
+          <div class="pa3">
+            <h3 class="b">Information architecture</h3>
+            <p class="lh-large">One of Chrome's largest UX challenges is how to scale to a growing feature set while staying simple. I led efforts to redesign Chrome to make core functionality more discoverable - and also easier to reach on larger phones. </p>
           </div>
-          <div class="fl w-50 w-third-l pa1">
-            <div class="f6 b bg-white br-pill pv2 ph3 ba b--black-20">Motion design</div>
-          </div>
-          <div class="fl w-50 w-third-l pa1">
-            <div class="f6 b bg-white br-pill pv2 ph3 ba b--black-20">Prototyping</div>
-          </div>
-          <div class="fl w-50 w-third-l pa1">
-            <div class="f6 b bg-white br-pill pv2 ph3 ba b--black-20">Web development</div>
+          <div class="flex-l">
+            <div class="w-100 pa3">
+              <img src="images/chrome-ia-1.gif">
+              <p class="lh-large mt2">Our first attempt used the spatial metaphor of a peeking, expandable sheet - later popularized in other apps. This approach gained a loyal fanbase but ended up being too radical of a change for our mainstream users. </p>
+            </div>
+            <div class="w-100 pa3">
+              <img src="images/chrome-ia-2.png">
+              <p class="lh-large mt2">We took what we learned and revised, keeping the address bar in a familiar position while exposing additional functionality in a separate bottom bar.</p>
+            </div>
           </div>
         </div>
       </div>
     </section>
-    <section class="mb5">
-      <div class="cf mb3 tc tl-ns">
-        <img src="images/chrome-icon.png" class="w-icon fl-ns mr3-ns br-icon shadow-icon">
-        <h2 class="b">Google Chrome</h2>
-        <p>San Francisco, California. 2013 to present.</p>
-      </div>
-      <p class="lh-large">Chrome is the web browser of choice for over a billion people around the world. Designing something that works for all these people takes lots of patience and deliberation. Most of my work here is future-facing and not yet released.</p>
-    </section>
-    <section class="mb5">
-      <div class="cf mb3 tc tl-ns">
-        <img src="images/abide-icon.png" class="w-icon fl-ns mr3-ns br-icon shadow-icon">
-        <h2 class="b">Abide</h2>
-        <p>Menlo Park, California. 2015 to 2017.</p>
-      </div>
-      <p class="lh-large">Abide has helped millions of Christians pray through guided audio prayers. The startup comprises full-time employees and regular volunteers applying Silicon Valley technical expertise to spiritual practice. I worked on design and web development.</p>
-      <div class="cf mt3">
-        <figure class="fl w-50">
-          <img src="images/abide-1.png">
-          <figcaption class="gray f6">I designed and built the marketing site at <a href="https://abide.is/" class="dark-gray hover-orange">abide.is</a></figcaption>
-        </figure>
-        <figure class="fl w-50">
-          <img src="images/abide-2.jpg">
-        </figure>
-      </div>
-    </section>
-    <section class="mb5">
-      <div class="cf mb3 tc tl-ns">
-        <img src="images/afriscout-icon.png" class="w-icon fl-ns mr3-ns br-icon shadow-icon">
-        <h2 class="b">AfriScout</h2>
-        <p>Nairobi, Kenya with Google.org, PCI Global, and iHub. August 2016.</p>
-      </div>
-      <p class="lh-large">Drought has devastated the hundreds of millions of <a href="https://medium.com/@PCI/innovative-satellite-solutions-to-ethiopia-s-drought-2b4ae64b200e" class="dark-gray hover-orange">nomadic pastoralists</a> across Africa. In 2013, nonprofit PCI Global began a successful project to use satellite maps to help pastoralists make more informed decisions about herd migration. Our team deployed by Google.org collaborated with PCI to design a way to scale the project from paper map distribution to a digital solution.</p>
-      <div class="cf mt3">
-        <figure class="fl w-50">
-          <img src="images/afriscout-1.jpg">
-          <figcaption class="gray f6">We designed the app collaboratively in one week using the design sprint methodology</figcaption>
-        </figure>
-        <figure class="fl w-50">
-          <img src="images/afriscout-2.jpg">
-          <figcaption class="gray f6">I built an interactive prototype which we took to a Maasai village for interviews</figcaption>
-        </figure>
-      </div>
-    </section>
-    </section>
-    <section class="mb5">
-      <div class="cf mb3 tc tl-ns">
-        <img src="images/ymf-icon.png" class="w-icon fl-ns mr3-ns br-icon shadow-icon">
-        <h2 class="b">You and Me Forever</h2>
-        <p>Mountain View, California with Crazy Love. 2014 to 2015.</p>
-      </div>
-      <p class="lh-large">Along with a team of volunteers, I designed an interactive app version of the latest book by bestselling Christian author Francis Chan. The app allows readers to share their insights through text or video. The proceeds of this project are helping relieve <a href="https://vimeo.com/107938492" class="dark-gray hover-orange">poverty-induced prostitution</a> in Ethiopia.</p>
-    </section>
-    <section>
-      <div class="cf mb3 tc tl-ns tc tl-ns">
-        <img src="images/nepal-icon.png" class="w-icon fl-ns mr3-ns br-icon shadow-icon">
-        <h2 class="b">Nepal Human Development Report</h2>
-        <p>Kathmandu, Nepal with Google and Kathmandu Living Labs. July 2015.</p>
-      </div>
-      <p class="lh-large">Google deployed a team of volunteers to help nonprofits in post-earthquake Nepal with technical needs. My teammate Sumier and I collaborated with local tech nonprofit Kathmandu Living Labs on a project for Nepal's government to visualize human development statistics. The result is now available on the <a href="http://www.npc.gov.np/human_development_indicators_by_district/" class="dark-gray hover-orange">government's website</a>.</p>
-      <div class="cf mt3">
-        <figure class="fl w-50">
-          <img src="images/nepal-1.jpg">
-          <figcaption class="gray f6">Our team at Kathmandu Living Labs</figcaption>
-        </figure>
-        <figure class="fl w-50">
-          <img src="images/nepal-2.jpg">
-          <figcaption class="gray f6">Sumier presented our work at Interaction 16 in Helsinki</figcaption>
-        </figure>
-      </div>
-    </section>
+    <h2 class="gill-sans f6 ttu tracked-mega mb4">Volunteering</h2>
+    <div class="na2">
+      <section class="ph2 pb5 w-50-ns fl-ns">
+        <div class="cf mb3">
+          <img src="images/afriscout-icon.png" class="w-icon fl mr3 br-icon shadow-icon">
+          <h2 class="b">AfriScout</h2>
+          <p>Google.org & PCI Global. August 2016.</p>
+        </div>
+        <p class="lh-large">App design for <a href="https://www.pciglobal.org/afriscout/" class="dark-gray hover-orange">mapping application</a> empowering African pastoralists to find pasture.</p>
+      </section>
+      <section class="ph2 pb5 w-50-ns fl-ns">
+        <div class="cf mb3">
+          <img src="images/nepal-icon.png" class="w-icon fl mr3 br-icon shadow-icon">
+          <h2 class="b">Nepal Human Development Report</h2>
+          <p>Google.org & Kathmandu Living Labs. July 2015.</p>
+        </div>
+        <p class="lh-large">Website design and development for <a href="http://www.npc.gov.np/human_development_indicators_by_district/" class="dark-gray hover-orange">data visualization</a> built for the Nepal government. Presented at <a href="http://interaction16.ixda.org/session/assisting-nepal-after-the-earthquake-lessons-learned-from-applying-design-thinking-in-a-post-disaster-context/index.html" class="dark-gray hover-orange">Interaction 16</a>.
+      </section>
+      <section class="ph2 pb5 w-50-ns fl-ns">
+        <div class="cf mb3">
+          <img src="images/abide-icon.png" class="w-icon fl mr3 br-icon shadow-icon">
+          <h2 class="b">Abide</h2>
+          <p>Carpenters Code. 2015 to 2017.</p>
+        </div>
+        <p class="lh-large">Landing page design and development for Christian meditation app.</p>
+        </div>
+      </section>
+      </section>
+      <section class="ph2 pb5 w-50-ns fl-ns">
+        <div class="cf mb3">
+          <img src="images/ymf-icon.png" class="w-icon fl mr3 br-icon shadow-icon">
+          <h2 class="b">You and Me Forever</h2>
+          <p>Crazy Love. 2014 to 2015.</p>
+        </div>
+        <p class="lh-large">App design for book by bestselling Christian author Francis Chan. Proceeds benefit work against <a href="https://vimeo.com/107938492" class="dark-gray hover-orange">poverty-induced prostitution</a> in Ethiopia.</p>
+      </section>
+    </div>
   </main>
 </body>
 </html>
