Update job title

--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
     <section class="dt w-100 min-vh-100 pa4 pv5 pa5-ns bg-cl-dark-blue white">
       <div class="dtc v-mid">
         <h1 class="self-name f3 cl-cyan ttu tracked-mega mb1">Chris Lee</h1>
-        <p class="self-description mb5">Designer, Google Chrome</p>
+        <p class="self-description mb5">Designer, Uber Eats</p>
         <ul class="list pl0">
           <li class="mv2"><a href="mailto:chris@chrsl.net" class="link white-70 underline-hover">chris@chrsl.net<a/></li>
           <li class="mv2"><a href="https://twitter.com/cleerview" class="link white-70 underline-hover">Twitter<a/></li>
+          <li class="mv2"><a href="https://www.linkedin.com/in/cleer/" class="link white-70 underline-hover">LinkedIn<a/></li>
         </ul>
       </div>
     </section>
