Add Uber Eats entry to work

--- a/work.html
+++ b/work.html
@@ -46,36 +46,22 @@
           </ul>
         </div>
       </div>
-      <!-- <h2 class="gill-sans f6 ttu tracked-mega mb2">Skills</h2>
-      <div class="cf mnh1">
-        <div class="fl w-50 w-third-l pa1">
-          <div class="f6 b bg-white br-pill pv2 ph3 ba b--black-20">Product strategy</div>
-        </div>
-        <div class="fl w-50 w-third-l pa1">
-          <div class="f6 b bg-white br-pill pv2 ph3 ba b--black-20">Interaction design</div>
-        </div>
-        <div class="fl w-50 w-third-l pa1">
-          <div class="f6 b bg-white br-pill pv2 ph3 ba b--black-20">Visual design</div>
-        </div>
-        <div class="fl w-50 w-third-l pa1">
-          <div class="f6 b bg-white br-pill pv2 ph3 ba b--black-20">Motion design</div>
-        </div>
-        <div class="fl w-50 w-third-l pa1">
-          <div class="f6 b bg-white br-pill pv2 ph3 ba b--black-20">Prototyping</div>
-        </div>
-        <div class="fl w-50 w-third-l pa1">
-          <div class="f6 b bg-white br-pill pv2 ph3 ba b--black-20">Web development</div>
-        </div>
-      </div> -->
+    </section>
+    <section class="mb5">
+      <div class="cf mb3 tl-ns">
+        <img src="images/ubereats-icon.png" class="w-icon fl mr3 br-icon shadow-icon">
+        <p><h2 class="b di">Uber Eats</h2>, Senior Designer II</p>
+        <p>2020 to present.</p>
+      </div>
+      <p class="lh-large mb3">I design our menus experience, ranging from internal tools for restaurants to consumer ordering functionality.</p>
     </section>
     <section class="mb5">
       <div class="cf mb3 tl-ns">
         <img src="images/chrome-icon.png" class="w-icon fl mr3 br-icon shadow-icon">
         <p><h2 class="b di">Google Chrome</h2>, Staff Designer</p>
-        <p>2013 to present.</p>
+        <p>2013 to 2020.</p>
       </div>
-      <p class="lh-large mb3">Dozens of designers now work on Chrome, but when I started, there were about five of us. I was just a new college grad working on one of the world's most popular software products–but that didn't stop me from proposing bold new projects. This ability to creatively question the status quo was recognized with two promotions in my first couple years on the job.
-      <p class="lh-large mb3">It took some hard lessons to realize that execution is just as important as the idea. Over time, I refined the ability to carry some of the team's most ambitious projects all the way to success. Currently, I lead the design team for Chrome for Android, our largest platform, and help define our overall product strategy.</p>
+      <p class="lh-large mb3">I started working on Chrome as new college grad, creating one of the world's most popular software products with about five other designers. Over my seven years there, the team grew to dozens - and I initiated and drove some of our most ambitious initiatives.</p>
       <blockquote class="mv3 bl bw1 b--black-10 pl3">
         <p class="lh-large mb3 i">It's shameful that something so important is so intangible to describe, but Chris builds products. He *gets* what's important to systems and platforms, and then executes on them, and keeps executing on them until something takes hold in the org. He understands the value of planting seeds and seeing them come to fruition later.</p>
         <footer>– Glen Murphy, UX Director, Chrome & Android</footer>
