Add blog section and first post

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
   <nav class="gill-sans f6 ttu absolute w-100 bg-cl-dark-blue white bb b--white-10 z-1">
     <ul class="list ph4 ph5-ns">
       <li class="dib bb bw1 mr4 white pv3" style="margin-bottom: -1px"><span class="tracked-mega">Abou</span>t</li>
-      <li class="dib"><a href="/work" class="link white-70 hover-white pv3"><span class="tracked-mega">Wor</span>k</a></li>
+      <li class="dib mr4"><a href="/work" class="link white-70 hover-white pv3 "><span class="tracked-mega">Wor</span>k</a></li>
+      <li class="dib mr4"><a href="/posts" class="link white-70 hover-white pv3"><span class="tracked-mega">Writin</span>g</a></li>
     </ul>
   </nav>
   <main class="charter lh-copy">
