--- a/work.html
+++ b/work.html
@@ -22,10 +22,11 @@
   <nav class="gill-sans f6 ttu w-100 bb b--black-10 ">
     <ul class="list ph4 ph5-ns">
       <li class="dib mr4"><a href="/" class="link mid-gray hover-orange pv3"><span class="tracked-mega">Abou</span>t</a></li>
-      <li class="dib bb bw1 dark-gray pv3" style="margin-bottom: -1px"><span class="tracked-mega">Wor</span>k</li>
+      <li class="dib mr4 bb bw1 dark-gray pv3" style="margin-bottom: -1px"><span class="tracked-mega">Wor</span>k</li>
+      <li class="dib mr4"><a href="/posts" class="link mid-gray hover-orange pv3"><span class="tracked-mega">Writin</span>g</a></li>
     </ul>
   </nav>
-  <main class="charter f5 lh-copy mw8 center pa4 pt4 pa5-ns">
+  <main class="charter f6 lh-copy mw8 center pa4 pt4 pa5-ns">
     <section class="mb5 pb5 bb b--black-10">
       <h1 class="f3 ttu orange tracked-mega mb3">Chris Lee</h1>
       <p class="f3 lh-large mb4">Real decisions aren't simple. I solve complex problems through a combination of curiosity, creativity, and analytical decision-making.</p>
@@ -70,7 +71,7 @@
         <div class="mv4 sw-100 bg-black-05 br3 pa3">
           <div class="pa3">
             <h3 class="b">Tabs & tab groups</h3>
-            <p class="lh-large">Even as computing has gone mobile, we often fall back to our desktop computers for complex tasks like buying a new pair of shoes or planning a trip. I led a redesign of Chrome's tabs experience to help you get these things done on the go. Featured on the <a href="https://blog.google/products/chrome/get-more-done-with-google-chrome/" class="dark-gray hover-orange">Google blog.</a></a></p>
+            <p class="lh-large">Even as computing has gone mobile, we often fall back to our desktop computers for complex tasks like buying a new pair of shoes or planning a trip. I led a redesign of Chrome's tabs experience to help you get these things done on the go. Featured on the <a href="https://blog.google/products/chrome/get-more-done-with-google-chrome/" class="dark-gray hover-orange">Google blog</a>.</p>
           </div>
           <div class="flex-l">
             <div class="w-100 pa3">
