Set work images max width

--- a/work.html
+++ b/work.html
@@ -75,11 +75,11 @@
           </div>
           <div class="flex-l">
             <div class="w-100 pa3">
-              <img src="images/chrome-tg-1.gif">
+              <img src="images/chrome-tg-1.gif" style="width: 100%; max-width: 360px">
               <p class="lh-large mt2">Tab groups help you organize longer running, multiple page tasks</p>
             </div>
             <div class="w-100 pa3">
-              <img src="images/chrome-tg-2.gif">
+              <img src="images/chrome-tg-2.gif" style="width: 100%; max-width: 360px">
               <p class="lh-large mt2">Once you group tabs, you can compare them in just a tap</p>
             </div>
           </div>
@@ -94,11 +94,11 @@
           </div>
           <div class="flex-l">
             <div class="w-100 pa3">
-              <img src="images/chrome-ia-1.gif">
+              <img src="images/chrome-ia-1.gif" style="width: 100%; max-width: 360px">
               <p class="lh-large mt2">Our first attempt used the spatial metaphor of a peeking, expandable sheet - later popularized in other apps. This approach gained a loyal fanbase but ended up being too radical of a change for our mainstream users. </p>
             </div>
             <div class="w-100 pa3">
-              <img src="images/chrome-ia-2.png">
+              <img src="images/chrome-ia-2.png" style="width: 100%; max-width: 360px">
               <p class="lh-large mt2">We took what we learned and revised, keeping the address bar in a familiar position while exposing additional functionality in a separate bottom bar.</p>
             </div>
           </div>
