--- a/work.html
+++ b/work.html
@@ -18,7 +18,7 @@
    })();
   </script>
 </head>
-<body class="bg-cl-light-gray dark-gray">
+<body class="bg-near-white dark-gray">
   <nav class="gill-sans f6 ttu w-100 bb b--black-10 ">
     <ul class="list ph4 ph5-ns">
       <li class="dib mr4"><a href="/" class="link mid-gray hover-orange pv3"><span class="tracked-mega">Abou</span>t</a></li>
@@ -26,7 +26,7 @@
       <li class="dib mr4"><a href="/posts" class="link mid-gray hover-orange pv3"><span class="tracked-mega">Writin</span>g</a></li>
     </ul>
   </nav>
-  <main class="charter f6 lh-copy mw8 center pa4 pt4 pa5-ns">
+  <main class="charter f6 lh-copy cl-mw center pa4 pt4 pa5-ns">
     <section class="mb5 pb5 bb b--black-10">
       <h1 class="f3 ttu orange tracked-mega mb3">Chris Lee</h1>
       <p class="f3 lh-large mb4">Real decisions aren't simple. I solve complex problems through a combination of curiosity, creativity, and analytical decision-making.</p>
@@ -68,7 +68,7 @@
         <footer>– Glen Murphy, UX Director, Chrome & Android</footer>
       </blockquote>
       <div class="mt4">
-        <div class="mv4 sw-100 bg-black-05 br3 pa3">
+        <div class="mv4 sw-100 bg-black-05 pa3">
           <div class="pa3">
             <h3 class="b">Tabs & tab groups</h3>
             <p class="lh-large">Even as computing has gone mobile, we often fall back to our desktop computers for complex tasks like buying a new pair of shoes or planning a trip. I led a redesign of Chrome's tabs experience to help you get these things done on the go. Featured on the <a href="https://blog.google/products/chrome/get-more-done-with-google-chrome/" class="dark-gray hover-orange">Google blog</a>.</p>
@@ -87,7 +87,7 @@
       </div>
       <div class="mt4">
 
-        <div class="mv4 sw-100 bg-black-05 br3 pa3">
+        <div class="mv4 sw-100 bg-black-05 pa3">
           <div class="pa3">
             <h3 class="b">Information architecture</h3>
             <p class="lh-large">One of Chrome's largest UX challenges is how to scale to a growing feature set while staying simple. I led efforts to redesign Chrome to make core functionality more discoverable - and also easier to reach on larger phones. </p>
@@ -105,8 +105,8 @@
         </div>
       </div>
     </section>
-    <h2 class="gill-sans f6 ttu tracked-mega mb4">Volunteering</h2>
-    <div class="na2">
+    <h2 class="gill-sans ttu tracked-mega mb4">Volunteering</h2>
+    <div class="na2 f6">
       <section class="ph2 pb5 w-50-ns fl-ns">
         <div class="cf mb3">
           <img src="images/afriscout-icon.png" class="w-icon fl mr3 br-icon shadow-icon">
@@ -130,7 +130,6 @@
           <p>Carpenters Code. 2015 to 2017.</p>
         </div>
         <p class="lh-large">Landing page design and development for Christian meditation app.</p>
-        </div>
       </section>
       </section>
       <section class="ph2 pb5 w-50-ns fl-ns">
