Use variable webfonts

--- a/posts.html
+++ b/posts.html
@@ -53,7 +53,7 @@
         {% for post in site.posts %}
         <li class="hover-bg-light-gray">
           <a href="{{post.url}}" class="db pa3 link dark-gray">
-            <div class="dib b cl-blue">{{post.title}}</div>
+            <div class="dib fw6 cl-blue">{{post.title}}</div>
             <div class="dib"></div>
             <div class="dib black-50">{{post.date | date: "%B %-d, %Y"}}</div>
           </a>
