--- a/work.html
+++ b/work.html
@@ -51,7 +51,7 @@
     <section class="mb5">
       <div class="cf mb3 tl-ns">
         <img src="images/ubereats-icon.png" class="w-icon fl mr3 br-icon shadow-icon">
-        <p><h2 class="b di">Uber Eats</h2>, Senior Designer II</p>
+        <p><h2 class="fw6 di">Uber Eats</h2>, Senior Designer II</p>
         <p>2020 to present.</p>
       </div>
       <p class="lh-large mb3">I design our menus experience, ranging from internal tools for restaurants to consumer ordering functionality.</p>
@@ -59,7 +59,7 @@
     <section class="mb5">
       <div class="cf mb3 tl-ns">
         <img src="images/chrome-icon.png" class="w-icon fl mr3 br-icon shadow-icon">
-        <p><h2 class="b di">Google Chrome</h2>, Staff Designer</p>
+        <p><h2 class="fw6 di">Google Chrome</h2>, Staff Designer</p>
         <p>2013 to 2020.</p>
       </div>
       <p class="lh-large mb3">I started working on Chrome as new college grad, creating one of the world's most popular software products with about five other designers. Over my seven years there, the team grew to dozens - and I initiated and drove some of our most ambitious initiatives.</p>
@@ -70,7 +70,7 @@
       <div class="mt4">
         <div class="mv4 sw-100 bg-black-05 pa3">
           <div class="pa3">
-            <h3 class="b">Tabs & tab groups</h3>
+            <h3 class="fw6">Tabs & tab groups</h3>
             <p class="lh-large">Even as computing has gone mobile, we often fall back to our desktop computers for complex tasks like buying a new pair of shoes or planning a trip. I led a redesign of Chrome's tabs experience to help you get these things done on the go. Featured on the <a href="https://blog.google/products/chrome/get-more-done-with-google-chrome/" class="dark-gray hover-orange">Google blog</a>.</p>
           </div>
           <div class="flex-l">
@@ -89,7 +89,7 @@
 
         <div class="mv4 sw-100 bg-black-05 pa3">
           <div class="pa3">
-            <h3 class="b">Information architecture</h3>
+            <h3 class="fw6">Information architecture</h3>
             <p class="lh-large">One of Chrome's largest UX challenges is how to scale to a growing feature set while staying simple. I led efforts to redesign Chrome to make core functionality more discoverable - and also easier to reach on larger phones. </p>
           </div>
           <div class="flex-l">
@@ -105,12 +105,12 @@
         </div>
       </div>
     </section>
-    <h2 class="gill-sans ttu tracked-mega mb4">Volunteering</h2>
+    <h2 class="fw6 gill-sans ttu tracked-mega mb4">Volunteering</h2>
     <div class="na2 f6">
       <section class="ph2 pb5 w-50-ns fl-ns">
         <div class="cf mb3">
           <img src="images/afriscout-icon.png" class="w-icon fl mr3 br-icon shadow-icon">
-          <h2 class="b">AfriScout</h2>
+          <h2 class="fw6">AfriScout</h2>
           <p>Google.org & PCI Global. August 2016.</p>
         </div>
         <p class="lh-large">App design for <a href="https://www.pciglobal.org/afriscout/" class="dark-gray hover-orange">mapping application</a> empowering African pastoralists to find pasture.</p>
@@ -118,7 +118,7 @@
       <section class="ph2 pb5 w-50-ns fl-ns">
         <div class="cf mb3">
           <img src="images/nepal-icon.png" class="w-icon fl mr3 br-icon shadow-icon">
-          <h2 class="b">Nepal Human Development Report</h2>
+          <h2 class="fw6">Nepal Human Development Report</h2>
           <p>Google.org & Kathmandu Living Labs. July 2015.</p>
         </div>
         <p class="lh-large">Website design and development for <a href="http://www.npc.gov.np/human_development_indicators_by_district/" class="dark-gray hover-orange">data visualization</a> built for the Nepal government. Presented at <a href="http://interaction16.ixda.org/session/assisting-nepal-after-the-earthquake-lessons-learned-from-applying-design-thinking-in-a-post-disaster-context/index.html" class="dark-gray hover-orange">Interaction 16</a>.
@@ -126,7 +126,7 @@
       <section class="ph2 pb5 w-50-ns fl-ns">
         <div class="cf mb3">
           <img src="images/abide-icon.png" class="w-icon fl mr3 br-icon shadow-icon">
-          <h2 class="b">Abide</h2>
+          <h2 class="fw6">Abide</h2>
           <p>Carpenters Code. 2015 to 2017.</p>
         </div>
         <p class="lh-large">Landing page design and development for Christian meditation app.</p>
@@ -135,7 +135,7 @@
       <section class="ph2 pb5 w-50-ns fl-ns">
         <div class="cf mb3">
           <img src="images/ymf-icon.png" class="w-icon fl mr3 br-icon shadow-icon">
-          <h2 class="b">You and Me Forever</h2>
+          <h2 class="fw6">You and Me Forever</h2>
           <p>Crazy Love. 2014 to 2015.</p>
         </div>
         <p class="lh-large">App design for book by bestselling Christian author Francis Chan. Proceeds benefit work against <a href="https://vimeo.com/107938492" class="dark-gray hover-orange">poverty-induced prostitution</a> in Ethiopia.</p>
